# ROCO318

./: README.md
NetBeansProjects/ROCO318C++TutorialTasks1/: main.cpp
NetBeansProjects/ROCO318C++TutorialTasks1/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
NetBeansProjects/ROCO318C++TutorialTasks1/nbproject/private/: private.xml
NetBeansProjects/ROCO318C++TutorialTasks2/: main.cpp
NetBeansProjects/ROCO318C++TutorialTasks2/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
NetBeansProjects/ROCO318C++TutorialTasks2/nbproject/private/: private.xml
catkin_ws/beginner_tutorials/: CMakeLists.txt
catkin_ws/beginner_tutorials/launch/: talker_listener.launch
catkin_ws/beginner_tutorials/src/: Listener.h  Talker.h
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/include/imu_odom_and_twist_msgs/: ImuOdomAndTwist.h
catkin_ws/devel/include/op3_action_module_msgs/: IsRunning.h  IsRunningRequest.h  IsRunningResponse.h  StartAction.h
catkin_ws/devel/include/op3_ball_detector/: BallDetectorParams.h  CircleSetStamped.h  DetectorParamsConfig.h  GetParameters.h  GetParametersRequest.h  GetParametersResponse.h  SetParameters.h  SetParametersRequest.h  SetParametersResponse.h
catkin_ws/devel/include/op3_camera_setting_tool/: CameraParams.h  CameraParamsConfig.h  GetParameters.h  GetParametersRequest.h  GetParametersResponse.h  SetParameters.h  SetParametersRequest.h  SetParametersResponse.h  V4lParameter.h  V4lParameters.h
catkin_ws/devel/include/op3_gui_demo/: ui_main_window.h  ui_preview_walking_form.h
catkin_ws/devel/include/op3_offset_tuner_client/: ui_main_window.h
catkin_ws/devel/include/op3_offset_tuner_msgs/: GetPresentJointOffsetData.h  GetPresentJointOffsetDataRequest.h  GetPresentJointOffsetDataResponse.h  JointOffsetData.h  JointOffsetPositionData.h  JointTorqueOnOff.h  JointTorqueOnOffArray.h
catkin_ws/devel/include/op3_online_walking_module_msgs/: FootStepArray.h  FootStepCommand.h  GetJointPose.h  GetJointPoseRequest.h  GetJointPoseResponse.h  GetKinematicsPose.h  GetKinematicsPoseRequest.h  GetKinematicsPoseResponse.h  GetPreviewMatrix.h  GetPreviewMatrixRequest.h  GetPreviewMatrixResponse.h  JointPose.h  KinematicsPose.h  PreviewRequest.h  PreviewResponse.h  Step2D.h  Step2DArray.h  WalkingParam.h
catkin_ws/devel/include/op3_tuner_client/: ui_main_window.h
catkin_ws/devel/include/op3_tuning_module_msgs/: GetPresentJointOffsetData.h  GetPresentJointOffsetDataRequest.h  JointOffsetData.h  (+4 more)
catkin_ws/src/ROBOTIS-OP3-Tools/: .travis.yml  README.md
catkin_ws/src/ROBOTIS-OP3-Tools/op3_action_editor/: CHANGELOG.rst  CMakeLists.txt
catkin_ws/src/ROBOTIS-OP3-Tools/op3_action_editor/config/: editor_script.yaml
catkin_ws/src/ROBOTIS-OP3-Tools/op3_action_editor/include/op3_action_editor/: action_editor.h
catkin_ws/src/ROBOTIS-OP3-Tools/op3_action_editor/launch/: op3_action_editor.launch
catkin_ws/src/ROBOTIS-OP3-Tools/op3_action_editor/src/: action_editor.cpp  main.cpp
catkin_ws/src/ROBOTIS-OP3-Tools/op3_camera_setting_tool/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/ROBOTIS-OP3-Tools/op3_camera_setting_tool/cfg/: CameraParams.cfg
catkin_ws/src/ROBOTIS-OP3-Tools/op3_camera_setting_tool/config/: camera_parameter.yaml  camera_parameter_default.yaml
catkin_ws/src/ROBOTIS-OP3-Tools/op3_camera_setting_tool/include/op3_camera_setting_tool/: op3_camera_setting_tool.h
catkin_ws/src/ROBOTIS-OP3-Tools/op3_camera_setting_tool/launch/: op3_camera_setting_tool.launch
catkin_ws/src/ROBOTIS-OP3-Tools/op3_camera_setting_tool/msg/: CameraParams.msg
catkin_ws/src/ROBOTIS-OP3-Tools/op3_camera_setting_tool/src/: main.cpp
catkin_ws/src/ROBOTIS-OP3-Tools/op3_camera_setting_tool/srv/: GetParameters.srv  SetParameters.srv
catkin_ws/src/ROBOTIS-OP3-Tools/op3_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/ROBOTIS-OP3-Tools/op3_navigation/config/: footsteps_robotis_op3.yaml  footsteps_thormang3.yaml  navigation_params.yaml  planning_params.yaml  planning_params_robotis_op3.yaml  planning_params_thormang3.yaml
catkin_ws/src/ROBOTIS-OP3-Tools/op3_navigation/launch/: map_server_empty.launch  op3_footstep_planner.launch
catkin_ws/src/ROBOTIS-OP3-Tools/op3_navigation/maps/: empty.yaml  thor.yaml
catkin_ws/src/ROBOTIS-OP3-Tools/op3_offset_tuner_server/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/ROBOTIS-OP3-Tools/op3_offset_tuner_server/include/op3_offset_tuner_server/: op3_offset_tuner_server.h
catkin_ws/src/ROBOTIS-OP3-Tools/op3_offset_tuner_server/launch/: op3_offset_tuner_server.launch
catkin_ws/src/ROBOTIS-OP3-Tools/op3_offset_tuner_server/src/: main.cpp  op3_offset_tuner_server.cpp
catkin_ws/src/ROBOTIS-OP3-Tools/op3_tuner_client/: CMakeLists.txt
catkin_ws/src/ROBOTIS-OP3-Tools/op3_tuner_client/config/: r_ank_pitch.perspective
catkin_ws/src/ROBOTIS-OP3-Tools/op3_tuner_client/include/op3_tuner_client/: main_window.hpp  qnode.hpp
catkin_ws/src/ROBOTIS-OP3-Tools/op3_tuner_client/launch/: op3_tuner.launch  op3_tuner_client.launch
catkin_ws/src/ROBOTIS-OP3-Tools/op3_tuner_client/src/: main.cpp  main_window.cpp  qnode.cpp
catkin_ws/src/ROBOTIS-OP3-Tools/op3_tuner_client/ui/: main_window.ui
catkin_ws/src/ROBOTIS-OP3-Tools/op3_web_setting_tool/: CHANGELOG.rst  CMakeLists.txt  package.xml
catkin_ws/src/ROBOTIS-OP3-Tools/op3_web_setting_tool/html/: index.html
catkin_ws/src/ROBOTIS-OP3-Tools/op3_web_setting_tool/html/js/: mjpegcanvas.js
catkin_ws/src/ROBOTIS-OP3-Tools/op3_web_setting_tool/launch/: web_setting_server.launch
catkin_ws/src/ROBOTIS-OP3-Tools/robotis_op3_tools/: CHANGELOG.rst  package.xml
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/imu_odom_and_twist_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/odom_logger/: CMakeLists.txt
catkin_ws/src/roco318_tutorial/: CMakeLists.txt
(+423 files in other folders)
