<?xml version="1.0"?>
<package format="2">
  <name>op3_navigation</name>
  <version>0.2.2</version>
  <description>
    This package is for generating footsteps of ROBOTIS-OP3.
    It has several config files and launch files in order to use footstep planner package. 
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/op3_navigation</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>footstep_planner</exec_depend>
</package>
