<?xml version="1.0"?>
<package format="2">
  <name>robotis_op3_tools</name>
  <version>0.2.2</version>
  <description>
    ROS packages for the robotis_op3_tools (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/robotis_op3_tools</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Tools/issues</url>
  <buildtool_depend>catkin</buildtool_depend>  
  <exec_depend>op3_action_editor</exec_depend>
  <exec_depend>op3_camera_setting_tool</exec_depend>
  <exec_depend>op3_gui_demo</exec_depend>
  <exec_depend>op3_navigation</exec_depend>
  <exec_depend>op3_offset_tuner_client</exec_depend>
  <exec_depend>op3_offset_tuner_server</exec_depend>
  <exec_depend>op3_web_setting_tool</exec_depend>
  <export><metapackage/></export>
</package>
